# python-toy

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: deployment.md  design.md  development.md  vscode.md
src/python_toy/server/: app.py  main.py
src/python_toy/server/infra/: config.py  container.py  database.py  health.py  logging.py  middleware.py  session_context.py  transaction.py
src/python_toy/server/infra/error/: __init__.py  exceptions.py  middleware.py  problem.py  validation_error.py
src/python_toy/server/model/: common.py
src/python_toy/server/petstore/: __init__.py  api.py  base_repository.py  category_api.py  category_repository.py  category_service.py  db_models.py  id_type.py  mappers.py  models.py  pet_api.py  pet_repository.py  pet_service.py  query_options.py  repository.py  service.py  tag_api.py  tag_repository.py  tag_service.py  user_api.py  user_repository.py  user_service.py
src/tests/: conftest.py  test_errors.py  test_health_probes.py  test_petstore.py  test_root_meta.py
src/tests/server/infra/error/: test_errors.py  test_exception_hierarchy.py
src/tests/server/infra/health/: test_health_probes.py
src/tests/server/petstore/: test_petstore_api.py  test_petstore_unit.py  test_query_optimization.py
