[project]
name = "python-toy"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.12.0a1,<2.13", # pydantic.experimental.missing_sentinel.MISSING sentinel은 2.12.0a1에서 추가됨
    "regex>=2025.9.1",
    "httpx[http2,socks,zstd,brotli]>=0.28.1",
    "click>=8.2.1",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "dependency-injector>=4.43.0",
    "fastapi-utils>=0.8.0",
    "typing-inspect>=0.9.0",
    "sqlalchemy>=2.0.43,<2.1",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4,<3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12,<0.13",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
server = "python_toy.server.main:main"


[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-ra"
xfail_strict = true
asyncio_mode = "auto"

filterwarnings = [
    "ignore::pydantic.warnings.PydanticExperimentalWarning",
]
